--- a/HNB/spectral analysis.ipynb
+++ b/HNB/spectral analysis.ipynb
@@ -1,6 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"color: red\">INCOMPLETE DRAFT: DO NOT PUBLICIZE. This document is being made open to facilitate collaboration before completion. Do not publicize it. Comments gratefully accepted.</h1>\n",
+    "\n",
+    "# Classification of SARS-CoV-2 test results using consumer digital cameras: analysis of HNB-based colorimetry on RT-LAMP tests \n",
+    "\n",
+    "## by Andrew D. Straw, University of Freiburg, Faculty of Biology, <a href=\"mailto:straw@bio.uni-freiburg.de\">straw@bio.uni-freiburg.de</a>\n",
+    "\n",
+    "Hydroxy naphthol blue (HNB) is a dye that can be used in colorimetric assays to indicate the result of inexpensive LAMP-based diagnostic tests [(Goto et al., 2009)](https://doi.org/10.2144/000113072), including a rapid, and accurate test for SARS-CoV-2 using RT-LAMP [(Kellner et al. 2020)](https://doi.org/10.1101/2020.06.23.166397). Here we ask how to best use digital images of HNB-based SARS-CoV-2 tests. Ideally, image analysis could be completely automated such that reliable and robust classification of reaction results could be made by non-experts and would not require making subjective decisions on potentially subtle visual differences. Because the process is highly visual, experienced observers will be able to easily validate the automated processing steps.\n",
+    "\n",
+    "Below, we use a computational analysis in Python to investigate the use of colorimetry on images from standard consumer digital cameras with the goal of incorporating image acquisition and automated analysis as a part of a reliable, robust, inexpensive and easy to use SARS-CoV-2 testing system with with a minimum of equipment.\n",
+    "\n",
+    "The overall approach is to use spectral absorbance curves of HNB [(Goto et al., 2009)](https://doi.org/10.2144/000113072) as the basis of to predicting HNB appearance as a function of LAMP test status. In the course of a positive LAMP reaction, Mg2+ concentration in solution changes from high to low and, correspondingly, the visible appearance of the test result changes from violet to sky blue. However, these appearance changes are subjective and may be subtle for inexperienced observers.\n",
+    "\n",
+    "While Goto et al. 2009 noted that the visual appearance (the color) of HNB changed with Mg2+ concentration, their quantification method was to measure absorption at a single wavelength (650 nm). Here, we are interested in using a digital image sensor from a consumer camera to perform classification into \"positive\" vs \"negative\". While narrow-band quantification is not possible with a consumer camera, here we address the question of whether a comparison of intensity between the image color channels can be used to quantify Mg2+ concentration and thus classify the result of a test as positive or negative. Ideally, variation in illumination source, visual background, and digital camera manufacturer and model will have negligible effect on the outcome of the automated image processing.\n",
+    "\n",
+    "Below we use spectral response properties of a digital image sensor (the Sony IMX219) and the spectrum of simulated sunlight as representative of real world consitions.\n",
+    "\n",
+    "Based on [Goto et al. (2009)](https://doi.org/10.2144/000113072) and  [(Kellner et al. 2020)](https://doi.org/10.1101/2020.06.23.166397), we expect positive test results to be sky blue because much DNA is polymerized in the RT-LAMP reaction and Mg2+ concentration drops. Negative test results will be violet due to high Mg2+ concentration in solution.\n",
+    "\n",
+    "![Goto-et-al-2009-Fig1.png](Goto-et-al-2009-Fig1.png)\n",
+    "Figure: visual appearance and absorption spectrum of HNB, from [Goto et al. (2009)](https://doi.org/10.2144/000113072).\n",
+    "\n",
+    "- Tube a: 8 mM Mg2+ ions, no dNTPs, pH 8.6–9.0.\n",
+    "- Tube b: 8 mM Mg2+ ions, 1.4 mM dNTPs, pH insensitive, red line in spectrum\n",
+    "- ...\n",
+    "- Tube f: 4 mM Mg2+ ions, 1.4 mM dNTPs, pH insensitive, green line in spectrum\n",
+    "- Tube g: 0 mM Mg2+ ions, 1.4 mM dNTPs, pH insensitive, black line in spectrum"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -20,7 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data from Goto et al. 2009, digitized with https://apps.automeris.io/wpd/\n",
+    "# Load absorbance curves of HNB.\n",
+    "\n",
+    "# Data from Goto et al. 2009, digitized with WebPlotDigitizer https://apps.automeris.io/wpd/\n",
     "hnb_Mg_0mM = pd.read_csv(\"hnb_Mg_0mM.csv\",names=[\"wavelength\",\"Aborbance, HNB, Mg2+ 0 mM\"], index_col=0)\n",
     "hnb_Mg_8mM = pd.read_csv(\"hnb_Mg_8mM.csv\",names=[\"wavelength\",\"Aborbance, HNB, Mg2+ 8 mM\"], index_col=0)"
    ]
@@ -31,6 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load camera curves.\n",
+    "\n",
     "# Data from https://raw.githubusercontent.com/khufkens/pi-camera-response-curves/master/Sony_IMX219_spectral_response.csv\n",
     "camera = pd.read_csv(\"Sony_IMX219_spectral_response.csv\", index_col=0)\n",
     "camera.index = camera.index.astype(float)\n",
@@ -43,23 +79,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Modified from https://github.com/axr6077/ParticleTrajectory/blob/dce4e5ee9f1492ccc4816632c7dbf0d47651e7e6/Python%20Scripts/spectrum.py\n",
-    "def black_body(wavelengths, T):\n",
-    "    from scipy.constants import h, c, k\n",
+    "# Merge all dataframes according to wavelength and interpolate\n",
     "\n",
-    "    l = wavelengths * 1e-9\n",
-    "    energy_density = 2 * h * c ** 2 / l ** 5 * 1.0 / (np.exp(h * c / (l * k * T)) - 1.0)\n",
-    "    energy_density /= np.max(energy_density)\n",
-    "    return energy_density\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df = pd.merge_ordered(left=hnb_Mg_0mM, right=hnb_Mg_8mM, on='wavelength')\n",
     "df = pd.merge_ordered(left=df, right=camera, on='wavelength')\n",
     "\n",
@@ -69,11 +90,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Black body spectrum (Planck's Law). This simulates sunlight at about 5800K.\n",
+    "\n",
+    "# Modified from https://github.com/axr6077/ParticleTrajectory/blob/dce4e5ee9f1492ccc4816632c7dbf0d47651e7e6/Python%20Scripts/spectrum.py\n",
+    "def black_body(wavelengths, T):\n",
+    "    from scipy.constants import h, c, k\n",
+    "\n",
+    "    l = wavelengths * 1e-9\n",
+    "    energy_density = 2 * h * c ** 2 / l ** 5 * 1.0 / (np.exp(h * c / (l * k * T)) - 1.0)\n",
+    "    energy_density /= np.max(energy_density)\n",
+    "    return energy_density"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sunlight has a color temperature of ~5800K\n",
+    "# Calculate sunlight spectrum\n",
     "df[\"5800K\"] = black_body(df.index.values,5800)"
    ]
   },
@@ -83,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# convert absorbance to transmittance\n",
+    "# Convert HNB absorbance to transmittance\n",
     "df[\"HNB, Mg2+ 0 mM\"] = np.power(10.0,-df[\"Aborbance, HNB, Mg2+ 0 mM\"].values)\n",
     "df[\"HNB, Mg2+ 8 mM\"] = np.power(10.0,-df[\"Aborbance, HNB, Mg2+ 8 mM\"].values)\n",
     "df.drop(columns=[\"Aborbance, HNB, Mg2+ 0 mM\",\"Aborbance, HNB, Mg2+ 8 mM\"],inplace=True)"
@@ -900,6 +939,8 @@
     }
    ],
    "source": [
+    "# As a sanity check, let's plot our spectra. Unfortunately, with this simple \n",
+    "# one-line plot command, we cannot easily assign relevant colors to the lines.\n",
     "df.plot();"
    ]
   },
