slight text updates

--- a/HNB/spectral analysis.ipynb
+++ b/HNB/spectral analysis.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<h1 style=\"color: red\">INCOMPLETE DRAFT: DO NOT PUBLICIZE. This document is being made open to facilitate collaboration before completion. Do not publicize it. Comments gratefully accepted.</h1>\n",
     "\n",
-    "# Classification of SARS-CoV-2 test results using consumer digital cameras: analysis of HNB-based colorimetry on RT-LAMP tests \n",
+    "# Using consumer digital cameras to facilitate analysis of HNB-based colorimetry on RT-LAMP tests \n",
     "\n",
     "## by Andrew D. Straw, University of Freiburg, Faculty of Biology, <a href=\"mailto:straw@bio.uni-freiburg.de\">straw@bio.uni-freiburg.de</a>\n",
     "\n",
@@ -16,7 +16,7 @@
     "\n",
     "Below, we use a computational analysis in Python to investigate the use of colorimetry on images from standard consumer digital cameras with the goal of incorporating image acquisition and automated analysis as a part of a reliable, robust, inexpensive and easy to use SARS-CoV-2 testing system with with a minimum of equipment.\n",
     "\n",
-    "Our approach is to predict the appearance of HNB in digital images for both positive and negative reactions. As a validation step, we compare these predictions to photos of HNB. Finally, based on considerations of human color perception, we propose two methods to change the colors of digital images to facilitate manual classification of HNB. The first, \"color shift\" was proposed by [(Kellner et al. 2020)](https://doi.org/10.1101/2020.06.23.166397) and, in a hue-saturation-value (HSV) or hue-saturation-lightness HSL space, rotates the hue by 180°. The second, \"color stretch\" performs a non-linear remapping of the hue space such that expected hues for HNB dyes occupy a larger portion of hue space."
+    "Our approach is to predict the appearance of HNB in digital images for both positive and negative reactions. As a validation step, we compare these predictions to photos of HNB. Finally, based on considerations of human color perception, we propose two methods to change the colors of digital images to facilitate manual classification of HNB. The first, \"color shift\" was proposed by [Kellner et al. 2020](https://doi.org/10.1101/2020.06.23.166397) and, in a hue-saturation-value (HSV) or hue-saturation-lightness HSL space, rotates the hue by 180°. The second, \"color stretch\" performs a non-linear remapping of the hue space such that expected hues for HNB dyes occupy a larger portion of hue space."
    ]
   },
   {
