minor notebook updates

--- a/HNB/spectral analysis.ipynb
+++ b/HNB/spectral analysis.ipynb
@@ -2682,7 +2682,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Result: predicted hue of HNB\n",
+    "### 5. Result: predicted hue of HNB\n",
     "\n",
     "Here we show the hue of our predicted appearange."
    ]
@@ -5253,7 +5253,7 @@
    "source": [
     "### 9. Proposal of \"color stretch\" method\n",
     "\n",
-    "(TODO: write this section) Quick summary: stretches color space around hues of interest."
+    "(TODO: write this section) Quick summary: stretches color space around hues of interest. Desired to be robust to variations in illuminant and white balance in cameras."
    ]
   },
   {
